# eva4j

./: .gitmodules  build.gradle.kts  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt
src/main/cpp/io.github.chihsiao.eva4j.jni/: EvaInitJNI.cpp  EvaModuleJNI.cpp  EvaProgramJNI.cpp  EvaSharedTermJNI.cpp
src/main/cpp/io.github.chihsiao.eva4j.jni/ckks/: EvaCkksCompilerJNI.cpp  EvaCkksEncodingInfoJNI.cpp  EvaCkksParametersJNI.cpp  EvaCkksSignatureJNI.cpp
src/main/cpp/io.github.chihsiao.eva4j.jni/seal/: EvaSchemeValueJNI.cpp  EvaSealModuleJNI.cpp  EvaSealPublicJNI.cpp  EvaSealSecretJNI.cpp  EvaSealValuationJNI.cpp
src/main/cpp/io.github.chihsiao.eva4j.jni/serialization/: EvaKnownTypeJNI.cpp  EvaSaveLoadJNI.cpp
src/main/cpp/java_classes/java/lang/: Long.h  Object.h
src/main/cpp/java_classes/java/util/: HashMap.h  Iterator.h  Map.h  Set.h
src/main/cpp/utils/: exposer.h
src/main/java/io/github/chihsiao/eva4j/jni/: EvaModuleJNI.java  EvaProgramJNI.java  EvaSharedTermJNI.java
src/main/kotlin/io/github/chihsiao/eva4kt/: EvaExpr.kt  EvaModule.kt  EvaProgram.kt  EvaTerm.kt
src/main/kotlin/io/github/chihsiao/eva4kt/ckks/: EvaCkksCompiler.kt  EvaCkksEncodingInfo.kt  EvaCkksParameters.kt  EvaCkksSignature.kt
src/main/kotlin/io/github/chihsiao/eva4kt/enums/: EvaOp.kt  EvaType.kt
src/main/kotlin/io/github/chihsiao/eva4kt/jni/: JniPeer.kt
src/main/kotlin/io/github/chihsiao/eva4kt/seal/: EvaSchemeValue.kt  EvaSealModule.kt  EvaSealPublic.kt  EvaSealSecret.kt  EvaSealValuation.kt
src/main/kotlin/io/github/chihsiao/eva4kt/serialization/: EvaKnownType.kt  EvaSaveLoad.kt
(+11 files in other folders)
